add chinese language with localization

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -29,6 +29,7 @@
     "close": "Close",
     "english": "English",
     "korean": "Korean",
+    "chinese": "Chinese",
     "tabHere": "Tab Here",
     "noImage": "No Image",
     "numberOfMyMovie": "Number of My Movie",
