--- a/assets/i18n/ko.json
+++ b/assets/i18n/ko.json
@@ -29,6 +29,7 @@
     "close": "닫기",
     "english": "영어",
     "korean": "한국어",
+    "chinese": "중국어",
     "tabHere": "클릭",
     "noImage": "사진이 없습니다",
     "numberOfMyMovie": "나의 영화 갯수",
